--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "arro_font";
+  src: url("../assets/fonts/RobotChildren.woff2") format("woff2"),
+    url("../assets/fonts/RobotChildren.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 $bg-color-dark: #0f0f0f;
 
 @mixin titles-font {
@@ -80,11 +88,11 @@ body {
     h2 {
       max-width: 100%;
       z-index: 2;
-      opacity: 10%;
+      opacity: 100%;
 
       text-align: center;
-      @include titles-font();
-      font-size: 5rem;
+      font-family: "arro_font", sans-serif;
+      font-size: 6rem;
 
       @media (max-width: 506px) {
         width: 200%;
@@ -95,8 +103,18 @@ body {
       text-align: center;
 
       @include subtitles-font();
-      font-size: 1.3rem;
+      font-size: 1.25 rem;
+      opacity: 100%;
+      padding-top: 10px;
+    }
+
+    h6 {
+      text-align: center;
+
+      @include subtitles-font();
+      font-size: 1.5rem;
       opacity: 10%;
+      padding-top: 20px;
     }
   }
 }
@@ -121,8 +139,8 @@ nav {
   z-index: 10;
 
   #logoImage {
-    width: 35px;
-    height: 35px;
+    width: 27px;
+    height: 27px;
     margin-left: 15px;
 
     opacity: 100%;
@@ -1055,7 +1073,44 @@ nav {
     53% 0%,
     53% 84%,
     92% 84%,
-    92% 82%
+    92% 82%,
+    70% 82%,
+    70% 29%,
+    78% 29%,
+    78% 65%,
+    69% 65%,
+    69% 66%,
+    77% 66%,
+    77% 45%,
+    85% 45%,
+    85% 26%,
+    97% 26%,
+    97% 28%,
+    84% 28%,
+    84% 34%,
+    54% 34%,
+    54% 89%,
+    30% 89%,
+    30% 58%,
+    83% 58%,
+    83% 5%,
+    68% 5%,
+    68% 36%,
+    62% 36%,
+    62% 1%,
+    12% 1%,
+    12% 34%,
+    60% 34%,
+    60% 57%,
+    98% 57%,
+    98% 83%,
+    1% 83%,
+    1% 53%,
+    91% 53%,
+    91% 84%,
+    8% 84%,
+    8% 83%,
+    4% 83%
   );
 }
 
@@ -1112,7 +1167,28 @@ nav {
       94% 83%,
       94% 56%,
       11% 56%,
-      11% 64%
+      11% 64%,
+      94% 64%,
+      94% 70%,
+      88% 70%,
+      88% 32%,
+      18% 32%,
+      18% 96%,
+      10% 96%,
+      10% 62%,
+      9% 62%,
+      9% 84%,
+      68% 84%,
+      68% 50%,
+      52% 50%,
+      52% 55%,
+      35% 55%,
+      35% 87%,
+      25% 87%,
+      25% 39%,
+      15% 39%,
+      15% 88%,
+      52% 88%
     );
   }
 
@@ -1124,7 +1200,30 @@ nav {
       68% 62%,
       68% 37%,
       97% 37%,
-      97% 89%
+      97% 89%,
+      13% 89%,
+      13% 45%,
+      51% 45%,
+      51% 88%,
+      17% 88%,
+      17% 54%,
+      81% 54%,
+      81% 75%,
+      79% 75%,
+      79% 76%,
+      38% 76%,
+      38% 28%,
+      61% 28%,
+      61% 12%,
+      55% 12%,
+      55% 62%,
+      68% 62%,
+      68% 51%,
+      0% 51%,
+      0% 92%,
+      63% 92%,
+      63% 4%,
+      65% 4%
     );
   }
 
@@ -1160,7 +1259,23 @@ nav {
       63% 39%,
       63% 92%,
       4% 92%,
-
+      4% 36%,
+      24% 36%,
+      24% 70%,
+      1% 70%,
+      1% 43%,
+      15% 43%,
+      15% 28%,
+      23% 28%,
+      23% 71%,
+      90% 71%,
+      90% 86%,
+      97% 86%,
+      97% 1%,
+      60% 1%,
+      60% 67%,
+      71% 67%,
+      71% 91%,
       17% 91%,
       17% 14%,
       39% 14%,
@@ -1187,7 +1302,25 @@ nav {
       4% 42%,
       4% 61%,
       17% 61%,
-      17% 12%
+      17% 12%,
+      26% 12%,
+      26% 63%,
+      73% 63%,
+      73% 43%,
+      90% 43%,
+      90% 67%,
+      50% 67%,
+      50% 41%,
+      42% 41%,
+      42% 46%,
+      50% 46%,
+      50% 84%,
+      96% 84%,
+      96% 78%,
+      49% 78%,
+      49% 25%,
+      63% 25%,
+      63% 14%
     );
   }
 
