--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -345,7 +345,7 @@ nav ul #notactiveMode {
 }
 
 .projectNav {
-  border: 0.5px solid #383838;
+  border-top: 0.5px solid #383838;
   display: flex;
   justify-content: space-around;
   position: sticky;
@@ -382,8 +382,26 @@ nav ul #notactiveMode {
 .projectNav #activeFilter {
   color: #181818;
   background-color: white;
-  opacity: 100%;
+  opacity: 90%;
   border: 1px solid white;
+}
+
+.shortDescriptionContainer {
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  opacity: 90%;
+}
+.shortDescriptionContainer p {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-size: 1.2rem;
+  color: #121212;
+  font-weight: 500;
+  font-size: 1.1rem;
+  padding: 2px;
+  text-align: center;
 }
 
 .projectListContainer {
@@ -394,7 +412,10 @@ nav ul #notactiveMode {
 .projectListContainer .projectContainer {
   display: flex;
   justify-content: space-around;
-  padding-top: 60px;
+  border-radius: 20px;
+  padding: 20px;
+  background-color: #151515;
+  margin-top: 80px;
   width: 90%;
 }
 @media (max-width: 778px) {
@@ -414,6 +435,7 @@ nav ul #notactiveMode {
 .projectListContainer .projectContainer .projectRightSection .projectRouteIMG img {
   border-radius: 25px;
   max-width: 75%;
+  opacity: 85%;
 }
 @media (max-width: 450px) {
   .projectListContainer .projectContainer .projectRightSection .projectRouteIMG img {
@@ -425,6 +447,9 @@ nav ul #notactiveMode {
   display: flex;
   flex-direction: column;
   width: 35%;
+  justify-content: space-between;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 @media (max-width: 778px) {
   .projectListContainer .projectContainer .projectLeftSection {
@@ -461,7 +486,7 @@ nav ul #notactiveMode {
   font-size: 2.5rem;
   line-height: 98%;
   margin-top: 15px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 @media (max-width: 778px) {
   .projectListContainer .projectContainer .projectLeftSection h2 {
@@ -487,7 +512,7 @@ nav ul #notactiveMode {
   font-size: 0.9rem;
   margin-right: 10px;
   padding: 5px 10px;
-  background-color: #0c0c0c;
+  background-color: #232323;
   border-radius: 15px;
 }
 .projectListContainer .projectContainer .projectLeftSection .projectInfo {
@@ -496,7 +521,7 @@ nav ul #notactiveMode {
   font-weight: 300;
   font-size: 1.2rem;
   font-size: 1rem;
-  background-color: #0c0c0c;
+  background-color: #232323;
   padding: 5px 10px;
   border-radius: 15px;
 }
@@ -523,8 +548,9 @@ nav ul #notactiveMode {
   width: fit-content;
   border-radius: 15px;
   padding: 10px 20px 5px 20px;
-  margin-top: 20px;
+  margin-top: 30px;
   background-color: white;
+  border: 2px solid white;
   text-align: center;
   text-decoration: none;
   color: #121212;
