--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -120,6 +120,11 @@ body {
 }
 
 //Nvigation Bar
+#lastNavLink {
+  border-right: 2px solid rgba(255, 255, 255, 0.35);
+  padding-right: 20px;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -496,42 +501,26 @@ nav {
     justify-content: space-around;
     border-radius: 20px;
     padding: 20px;
-    background-color: #151515;
+    border: 1px solid rgba(255, 255, 255, 0.35);
 
     margin-top: 80px;
 
     width: 90%;
+    height: 300px;
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 
     @media (max-width: 778px) {
       flex-direction: column;
     }
 
-    .projectRightSection {
-      .projectRouteIMG {
-        display: flex;
-        justify-content: right;
-        @media (max-width: 778px) {
-          justify-content: center;
-        }
-        img {
-          border-radius: 25px;
-          max-width: 75%;
-          opacity: 85%;
-
-          @media (max-width: 450px) {
-            max-width: 100%;
-            margin: 0 auto;
-          }
-        }
-      }
-    }
     .projectLeftSection {
       display: flex;
       flex-direction: column;
-      width: 35%;
+      width: 100%;
       justify-content: space-between;
-      padding-top: 20px;
-      padding-bottom: 20px;
 
       @media (max-width: 778px) {
         width: 60%;
@@ -556,11 +545,11 @@ nav {
 
       h2 {
         @include titles-font();
-        font-size: 2.5rem;
+        font-size: 5.2rem;
         line-height: 98%;
+        text-align: center;
 
-        margin-top: 15px;
-        margin-bottom: 10px;
+        margin-top: 35px;
 
         @media (max-width: 778px) {
           text-align: center;
@@ -570,8 +559,7 @@ nav {
 
       .projectTags {
         display: flex;
-        justify-content: left;
-        margin-bottom: 10px;
+        justify-content: center;
 
         @media (max-width: 778px) {
           display: none;
@@ -579,30 +567,20 @@ nav {
 
         p {
           @include text-font();
-          font-size: 0.9rem;
-
-          margin-right: 10px;
+          font-size: 1.2rem;
+          opacity: 75%;
           padding: 5px 10px;
-          background-color: #232323;
           border-radius: 15px;
-        }
-      }
 
-      .projectInfo {
-        @include text-font();
-        font-size: 1rem;
-
-        background-color: #232323;
-        padding: 5px 10px;
-        border-radius: 15px;
-
-        @media (max-width: 778px) {
-          display: none;
+          position: relative;
+          top: -18px;
         }
       }
 
       .projectRoute {
         text-decoration: none;
+        display: flex;
+        justify-content: center;
         @media (max-width: 778px) {
           display: none;
         }
