added perstistence to filters

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -720,6 +720,7 @@ nav ul #notactiveMode {
 }
 .project .backOverview {
   padding: 5px;
+  position: fixed;
 }
 .project .backOverview .backLink {
   display: flex;
