--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -801,6 +801,7 @@ nav {
   }
   .backOverview {
     padding: 5px;
+    position: fixed;
     .backLink {
       display: flex;
       text-decoration: none;
