--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -430,6 +430,8 @@ nav {
   justify-content: space-around;
 
   position: sticky;
+  top: 48px;
+
   bottom: 0px;
   z-index: 9;
 
@@ -505,8 +507,8 @@ nav {
 
     margin-top: 80px;
 
-    width: 90%;
-    height: 300px;
+    width: 80%;
+    height: 280px;
 
     background-size: cover;
     background-position: center;
@@ -854,7 +856,31 @@ nav {
     }
     .mainProjectContent {
       display: flex;
+      flex-direction: column;
       justify-content: center;
+      width: 60%;
+      align-self: center;
+
+      img {
+        align-self: center;
+        border-radius: 10px;
+        margin-top: 30px;
+      }
+
+      pre {
+        margin-top: 30px;
+      }
+
+      iframe {
+        align-self: center;
+        border-radius: 10px;
+        margin-top: 30px;
+      }
+
+      .contentNote {
+        padding-top: 5px;
+        opacity: 0.6;
+      }
     }
   }
 }
