--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -94,8 +94,11 @@ nav {
     }
 
     img {
-      opacity: 30%;
-      filter: var(--svg-filter);
+      opacity: 50%;
+
+      :hover {
+        opacity: 100%;
+      }
     }
 
     .dark {
