--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,7 +15,7 @@
   --text-color: black;
   --text-thick: 500;
   --border-color: #0f0f0f;
-  --project-border: black;
+  --project-border: white;
   --svg-filter: invert(0%);
   --logo-filter: invert(100%);
   --dark-opa: 30%;
