--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -31,11 +31,7 @@
     font-size: 1.1rem;
 
     @media (max-width: 450px) {
-      font-size: 1rem;
-    }
-
-    @media (max-width: 450px) {
-      font-size: 0.85rem;
+      font-size: 1.1rem;
     }
 
     &:hover {
@@ -66,7 +62,7 @@
     display: flex;
     border-radius: 20px;
     padding: 20px;
-    border: 1px solid var(--project-border);
+    border: 2px solid var(--project-border);
 
     margin-top: 80px;
 
@@ -93,15 +89,11 @@
       flex-direction: column;
       justify-content: center;
       width: 100%;
+      height: 100%;
 
       @media (max-width: 778px) {
-        width: 60%;
-        margin: 0 auto;
       }
 
-      @media (max-width: 420px) {
-        width: 90%;
-      }
       h4 {
         @include subtitles-font();
         font-size: 1.1rem;
@@ -117,7 +109,7 @@
 
       h2 {
         @include titles-font();
-        font-size: 4rem;
+        font-size: 4.6rem;
         line-height: 98%;
         text-align: center;
         color: white;
@@ -125,9 +117,7 @@
         margin-top: 35px;
 
         @media (max-width: 778px) {
-          text-align: center;
-          font-size: 2.2rem;
-          margin-top: 0px;
+          font-size: 2.5rem;
         }
       }
 
@@ -136,14 +126,11 @@
         justify-content: center;
 
         @media (max-width: 778px) {
-          flex-direction: column;
-          text-align: center;
-          padding-top: 20px;
         }
 
         p {
           @include text-font();
-          font-size: 1rem;
+          font-size: 1.3rem;
           opacity: 75%;
           padding: 5px 10px;
           border-radius: 15px;
@@ -152,6 +139,10 @@
           top: -10px;
           color: white;
           font-weight: 500;
+
+          @media (max-width: 778px) {
+            font-size: 1rem;
+          }
         }
       }
 
