compressed assets | dist 19.4MB -> 5.43MB

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -780,6 +780,11 @@ nav ul .light {
     height: 200px;
   }
 }
+.project .projectOverview .mainProjectContent video {
+  width: 40%;
+  align-self: center;
+  margin-top: 30px;
+}
 .project .projectOverview .mainProjectContent .contentNote {
   padding-top: 5px;
   opacity: 0.6;
