--- a/src/styles/components/_project.scss
+++ b/src/styles/components/_project.scss
@@ -95,6 +95,12 @@
         }
       }
 
+      video {
+        width: 40%;
+        align-self: center;
+        margin-top: 30px;
+      }
+
       .contentNote {
         padding-top: 5px;
         opacity: 0.6;
